# Nate

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml
.github/workflows/: dev-remove.yml  dev-runner.yml  development-runner.yml  prod-remove.yml  production-runner.yml  runner.yml
.github/workflows/development/: remove.yml
.github/workflows/production/: remove.yml  runner.yml
src/: main.rs
src/commands/music/: play.rs
src/commands/utility/: age.rs  help.rs
src/events/: music.rs
