[package]
name = "nate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiopus = "0.2.0"
cmake = "0.1.50"
dotenv = "0.15.0"
futures = "0.3.30"
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.lavalink-rs]
version = "0.12"
default-features = false
features = ["macros", "native-tls", "songbird", "serenity"]

[dependencies.poise]
version = "0.6.1"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.4.1"
default-features = false
features = ["gateway", "native", "serenity"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]
