[package]
name = "nate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
lavalink-rs = { version = "0.12.0", default-features = false, features = [
	"serenity",
	"songbird",
	"rustls-native-roots",
	"macros",
] }
poise = { version = "0.6.1", default-features = false, features = [
	"cache",
	"chrono",
	"handle_panics",
] }
serde_json = "1.0.116"
songbird = { version = "0.4.1", default-features = false, features = [
	"gateway",
	"rustls",
	"serenity",
] }
symphonia = { version = "0.5.4", features = ["all"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
